--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Mi nombre es Joaquín Graffigna, soy un desarrollador web especializado en el área de front end y back end"
   </head>
-  <body style="font-family:helvetica, arial, sans-serif;margin: 0;">
-    <header style="background-color:#2753a1;color:white;text-align:center;padding:12px">
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <body style="background-color:#c5ced1;font-family:helvetica, arial, sans-serif;margin: 0;">
+    <header style="background-color:#2753a1;color:white;text-align:center;padding:12px;margin-right:0px;margin-left:0px;">
       <h1 style="display:inline-block;width:400px;font-weight:200;">CV de Joaquín Graffigna</h1>
       <p style="display:inline-block;width:400px;font-weight:700;">Desarrollador web Front End</p>
     </header>
@@ -14,10 +15,10 @@
       Desarrollador web con 4 años de experiencia, especializado en Front End.
     </div>
     <section>
-      <div style="width:900px;margin-left:230px;margin-top:0px;">
+      <div style="width:800px;margin-left:230px;margin-top:0px;">
         <div style="margin-top:0px;">
           <div style="display:inline-block;width:52%;margin-top:35px ;vertical-align:top;">
-            <h3 style="font-size:36px;font-weight:700;">Educación</h3>
+            <h3 style="background-color:#2753a1;border-radius:10px;font-size:36px;font-weight:700;color:white;">Educación</h3>
             <div>
               <dl>
                 <dt style="font-size:22px;text-transform:uppercase;margin-bottom:0px;margin-top:36px;">Titulo Secundario</dt>
@@ -25,14 +26,14 @@
               </dl>
             </div>
           </div>
-          <div style="display:inline-block;width:25%;margin:50px;">
-            <img src="foto.png" width="215">
+          <div style="display:inline-block;width:25%;margin-left:150px;margin-top:90px;">
+            <img src="Archivo_000.jpeg" width="200">
           </div>
         </div>
       </div>
-      <div style="width:450px;margin-left:230px;margin-top:0px;">
+      <div style="width:400px;margin-left:230px;margin-top:0px;">
         <div>
-          <h3 style="font-size:36px;font-weight:700;margin-top:0px;">Cursos realizados</h3>
+          <h3 style="background-color:#2753a1;border-radius:10px;font-size:36px;font-weight:700;color:white;">Cursos realizados</h3>
           <div>
             <ol>
               <li style="text-transform:uppercase;">Introducción a la Programación</li>
@@ -43,7 +44,7 @@
               <dl>
                 <dt>Realizado en <a href="https://codigofacilito.com/" target="_blank">CódigoFacilito</a>: </dt>
               </dl>
-              <li style="margin-top:30px;text-transform:uppercase;">Curso profesional Javascript</li>
+              <li style="margin-top:30px;text-transform:uppercase;">Curso profesional CSS</li>
               <dl>
                 <dt>Realizado en <a href="https://codigofacilito.com/" target="_blank">CódigoFacilito</a>: </dt>
               </dl>
@@ -53,8 +54,8 @@
       </div>
     </section>
     <section>
-      <div style="width:960px;margin-left:230px;margin-top:67px;">
-        <h3 style="font-size:36px;font-weight:700;">Redes Sociales</h3>
+      <div style="width:400px;margin-left:230px;margin-top:67px;">
+        <h3 style="background-color:#2753a1;border-radius:10px;font-size:36px;font-weight:700;color:white;">Redes Sociales</h3>
         <ul>
           <li style="margin-top:10px"><a href="mailto:joacograffigna@gmail.com">Gmail</a></li>
           <li style="margin-top:10px"><a href="https://wa.me/542364383175" target="_blank">WhatsApp</a></li>
