--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,12 @@
     <meta name="description" content="Mi nombre es Joaquín Graffigna, soy un desarrollador web especializado en el área de front end y back end"
   </head>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <body style="background-color:#c5ced1;font-family:helvetica, arial, sans-serif;margin: 0;">
-    <header style="background-color:#2753a1;color:white;text-align:center;padding:12px;margin-right:0px;margin-left:0px;">
+  <body style="width: 100vw;background-color:#c5ced1;font-family:helvetica, arial, sans-serif;margin: 0;">
+    <header style="width: 100vw;background-color:#2753a1;color:white;text-align:center;padding:;margin-right:0px;margin-left:0px;">
       <h1 style="display:inline-block;width:400px;font-weight:200;">CV de Joaquín Graffigna</h1>
       <p style="display:inline-block;width:400px;font-weight:700;">Desarrollador web Front End</p>
     </header>
-    <div class style="background-color:#0c4891;color:white;text-align:center;padding:9px">
+    <div class style="width: 100vw;background-color:#0c4891;color:white;text-align:center;height:20px;">
       Desarrollador web con 4 años de experiencia, especializado en Front End.
     </div>
     <section>
